[bdist_wheel]
universal = 0

[tool:pytest]
pep8ignore = E128 E501
pep8maxlinelength = 100

[metadata]
name = Flask-GnuPG
version = 1.0.0
author = Eldar Aliiev
author-email = e.aliiev@vnmu.edu.ua
summary = Flask extension for work with GnuPG
home-page = https://github.com/EldarAliiev/flask-gnupg
requires-dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Natural Language :: English',
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Communications
license_file = LICENSE
description-file =
    README.rst
    AUTHORS.rst
